// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Portal getContainer customize in same level 1`] = `
<div>
  <div
    class="holder"
  >
    Bamboo
  </div>
</div>
`;

exports[`Portal getContainer false 1`] = `
<div>
  Hello
  Bamboo
  Light
</div>
`;
